# Monthly-Budget-Manager

./: .gitignore  CHANGELOG.md  README.md  budget_manager.py  budget_manager_gui.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: changelog-check.yml  daily-release.yml  python-ci.yml  react-native-a11y.yml  react-native-build.yml  release-gates.yml  release-schedule.yml  release.yml  web-build.yml
docs/: README.md
docs/guides/: cli-reference.md  exporting-to-excel.md  getting-started.md
examples/: sample.csv
mobile/: LICENSE  pyproject.toml
mobile/src/budget_manager_mobile/: __main__.py  app.py  model.py
react-native/: README.md  package-lock.json  package.json  tsconfig.base.json
react-native/apps/desktop/: app.json  index.js  metro.config.js  package.json
react-native/apps/desktop/src/: App.tsx
react-native/apps/mobile/: bundle.js  index.js  metro.config.js  package.json
react-native/apps/mobile/__tests__/: App.a11y.test.tsx
react-native/apps/mobile/android/: settings.gradle
react-native/apps/mobile/ios/: Podfile
scripts/: build-react-android.ps1  test-android.ps1
tests/: test_budget_manager.py
web/: i18n.js  index.html  jest.config.js  package-lock.json  package.json  script.js  tour.js
web/__tests__/: script.test.js  tour.test.js
web/evidence/: 00-evidence-report.json  02-telemetry-full-walkthrough.json  02-telemetry-skipped-walkthrough.json  04-arabic-mid-tour-dom.html
web/scripts/: capture-tour-evidence-jsdom.mjs  capture-tour-evidence-puppeteer.mjs
(+19 files in other folders)
